# weidiao

./: .gitignore  build.gradle  settings.gradle  test.jks
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opencv-jni.cpp
app/src/main/java/openvc/: FileUtil.java
app/src/main/res/drawable/: progressbar_style.xml  selector_banner_point.xml  shape_btn_bg.xml  shape_btn_index.xml  shape_et_bottom_line.xml  shape_point_selected.xml  shape_point_unselected.xml  shape_round_bg.xml
app/src/main/res/layout/: activity_about.xml  activity_blue_list.xml  activity_carving_preview.xml  activity_carving_preview_start.xml  activity_carving_set.xml  activity_contact.xml  activity_guide.xml  activity_image_process.xml  activity_main.xml  activity_main1.xml  activity_material_list.xml  activity_notice.xml  activity_search_blue.xml  activity_setting.xml  activity_upload.xml  activity_working.xml  dialog_confirm_layout.xml  dialog_verify_layout.xml  dropdown_list_item.xml  dropdownlist_popupwindow.xml  dropdownlist_view.xml  include_title_bar.xml  item_device_list.xml  item_material_list.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
bannerlibrary/: build.gradle
drawinglibrary/: build.gradle
drawinglibrary/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
imagepicker/: build.gradle
imagepicker/src/main/: AndroidManifest.xml
openCVLibrary340/src/main/: AndroidManifest.xml
(+101 files in other folders)
